[package]
name = "spotify"
version = "0.1.0"
authors = ["max.messerich <max.messerich@rewe-digital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkce = "0.1.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.7.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.3.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
#base64 = "0.13.0"
url = "2.2.2"
futures = "0.3.15"
